refactor: QA feedback